2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: Curl thread: we need to set the current deployment and
	initialize it for this thread.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: Ensure CallData fields are reffed properly. Make
	fields/arguments typed more strictly, and ensure HandleNode refs the
	Request is stores in a field.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp: Fix compiler warning.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* debug.h:
	* runtime.h:
	* runtime.cpp:
	* network-curl.cpp:
	* http-streaming.cpp: Remove LOG_HTTPSTREAMING (only used in 1 place) and add
	LOG_CURL. Use LOG_CURL instead of having to change defines and recompile.

2010-06-28  Alan McGovern  <amcgovern@novell.com>

	* frameworkelement.cpp: Elements which are not visible should
	  not be checked for any dirty flags. Prevents spurious
	  warnings about bailing out after 250 passes.

2010-06-28  Alan McGovern  <amcgovern@novell.com>

	* grid.h:
	* shape.h:
	* panel.h:
	* media.h:
	* glyphs.h:
	* border.h:
	* grid.cpp:
	* canvas.h:
	* textbox.h:
	* dirty.cpp:
	* media.cpp:
	* panel.cpp:
	* shape.cpp:
	* glyphs.cpp:
	* canvas.cpp:
	* border.cpp:
	* textbox.cpp:
	* uielement.h:
	* textblock.h:
	* usercontrol.h:
	* uielement.cpp:
	* richtextbox.h:
	* textblock.cpp:
	* mediaelement.h:
	* richtextbox.cpp:
	* usercontrol.cpp:
	* mediaelement.cpp:
	* frameworkelement.h:
	* frameworkelement.cpp: Add MoonError* parameters to our
	  measure/arrange/UpdateLayout functions to ensure that errors
	  are propagated correctly.

2010-06-25  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (DownloadTile): Optimization: pass the
	BitmapImageContext as the closure argument to the event handlers.
	(TileOpened): Now takes a BitmapImageContext argument so we no
	longer have to do a lookup.
	(TileFailed): Same.
	(GetBitmapImageContext): Removed as it is no longer needed.